--- a/NJWeb/web/modules/content/problem/create.xhtml
+++ b/NJWeb/web/modules/content/problem/create.xhtml
@@ -17,7 +17,7 @@
                         <label for="nameProblem" class="col-md-1 control-label">Nombre Problema</label>
                         <div class="col-md-3">
                             <p:inputText id="nameProblem" styleClass="form-control" placeholder="Nombre del problema"
-                                         value="#{problemsBean.problemView.nameProblem}"
+                                         value="#{problemBean.problemView.nameProblem}"
                                          required="true" >
                                 <f:validateLength minimum="3" maximum="40" />
                             </p:inputText>
@@ -25,7 +25,7 @@
                         <label for="nameAuthor" class="col-md-1 control-label">Nombre autor</label>
                         <div class="col-md-3">
                             <p:inputText id="nameAuthor" styleClass="form-control" placeholder="Nombre del autor"
-                                         value="#{problemsBean.problemView.author}"
+                                         value="#{problemBean.problemView.author}"
                                          required="true" >
                                 <f:validateLength minimum="3" maximum="40" />
                             </p:inputText>
@@ -33,8 +33,8 @@
                         <label for="difficultyLevel" class="col-md-1 control-label">Dificultad</label>
                         <div class="col-md-3">
                             <p:selectOneMenu id="difficultyLevel" styleClass="selected-list form-control" style="width: 100%;" converter="difficultyLevelConvertJSF"
-                                             value="#{problemsBean.difficultyLevel}"  required="true" >
-                                <f:selectItem value="#{null}" itemLabel="Select a difficulty" />
+                                             value="#{problemBean.difficultyLevel}"  required="true" >
+                                <f:selectItem value="#{null}" itemLabel="Seleccione una dificultad" />
                                 <f:selectItems value="#{difficultyLevelBean.difficultyLevelItems}" />                                               
                             </p:selectOneMenu>
                         </div>
@@ -44,21 +44,21 @@
                         <div class="col-md-3">
                             <p:selectOneMenu id="complexAlgorithm" styleClass="selected-list form-control" 
                                              style="width: 100%;" converter="complexityProblemConvertJSF"
-                                             value="#{problemsBean.complexityAlgorithmView}"  required="true" >
-                                <f:selectItem value="#{null}" itemLabel="Select a complexity" />
+                                             value="#{problemBean.complexityAlgorithmView}"  required="true" >
+                                <f:selectItem value="#{null}" itemLabel="Seleccione una complejidad" />
                                 <f:selectItems value="#{complexityBean.complexityProblemItems}" />                                               
                             </p:selectOneMenu>
                         </div>
                         <label for="memoLimit" class="col-md-1 control-label">Memoria Usada</label>
                         <div class="col-md-3">
                             <p:spinner id="memoLimit" stepFactor="1" min="1" max="6"  placeholder="1"
-                                       value="#{problemsBean.problemView.timeLimit}"
+                                       value="#{problemBean.problemView.timeLimit}"
                                        required="true" />
                         </div>
                         <label for="timeProblem" class="col-md-1 control-label">Tiempo Juzgamiento</label>
                         <div class="col-md-3">
                             <p:spinner id="timeProblem" stepFactor="1" min="1" max="6"  placeholder="1"
-                                       value="#{problemsBean.problemView.timeLimit}"
+                                       value="#{problemBean.problemView.timeLimit}"
                                        required="true" />
                         </div>
                     </div>
@@ -68,7 +68,7 @@
                         <div class="col-md-3">
                             <p:fileUpload id="problemFile"
                                           styleClass="form-control" 
-                                          value="#{problemsBean.problemFile}"
+                                          value="#{problemBean.problemFile}"
                                           mode="simple"
                                           required="true"
                                           allowTypes="/(\.|\/)(pdf)$/" />
@@ -77,8 +77,8 @@
                         <div class="col-md-3">
                             <p:selectOneMenu id="categoryProblem" styleClass="selected-list form-control"
                                              style="width: 100%;" converter="categoryProblemConvertJSF"
-                                             value="#{problemsBean.categoryProblemView}"  required="true" >
-                                <f:selectItem value="#{null}" itemLabel="Select a category" />
+                                             value="#{problemBean.categoryProblemView}"  required="true" >
+                                <f:selectItem value="#{null}" itemLabel="Seleccione una categoria" />
                                 <f:selectItems value="#{categoryBean.categoryProblemItems}" />                                               
                             </p:selectOneMenu>
                         </div>
@@ -88,7 +88,7 @@
                         <label for="descriptionProblem" class="col-md-1 control-label">Obervaciones</label>
                         <div class="col-md-11">
                             <p:inputTextarea id="descriptionProblem" rows="5" style="width: 100%;" autoResize="false" placeholder="Observaciones y/o inquietudes"
-                                             value="#{problemsBean.problemView.description}"
+                                             value="#{problemBean.problemView.description}"
                                              required="true" />
                         </div>
                     </div>
@@ -101,7 +101,7 @@
                                         <div class="col-md-12">
                                             <p:fileUpload id="fileInput"
                                                           styleClass="form-control" 
-                                                          value="#{problemsBean.inputFile}"
+                                                          value="#{problemBean.inputFile}"
                                                           mode="simple"
                                                           required="true"
                                                           allowTypes="/(\.|\/)(|in|out|txt)$/" />
@@ -118,7 +118,7 @@
                                         <div class="col-md-12">
                                             <p:fileUpload id="fileOutput"
                                                           styleClass="form-control" 
-                                                          value="#{problemsBean.outputFile}"
+                                                          value="#{problemBean.outputFile}"
                                                           mode="simple"
                                                           required="true"
                                                           allowTypes="/(\.|\/)(|in|out|txt)$/" />
@@ -133,7 +133,7 @@
                         <p:commandButton id="btn-create-problem" update="@form"
                                          ajax="false" styleClass="btn btn-default"
                                          value="Crear problema"
-                                         action="#{problemsBean.actionCreateProblem}"/>
+                                         action="#{problemBean.actionCreateProblem}"/>
                     </div>
                 </fieldset>
             </h:form>
